# wasm-game

./: .gitignore  Cargo.toml  README.md
combat/: Cargo.toml
combat/src/: bindings.rs  lib.rs
command/: Cargo.toml
command/src/: bindings.rs  main.rs
enemy/: Cargo.toml
enemy/src/: bindings.rs  lib.rs
game_engine/: Cargo.toml
game_engine/src/: bindings.rs  lib.rs
inventory/: Cargo.toml
inventory/src/: bindings.rs  lib.rs
player/: Cargo.toml
player/src/: bindings.rs  lib.rs
wit/combat/: world.wit
wit/enemy/: world.wit
wit/game_engine/: world.wit
wit/inventory/: world.wit
wit/player/: world.wit
