[package]
name = "combat"
version = "0.1.0"
edition = "2021"
description = "Combat component for Zelda-style WASM game - handles battle mechanics and damage"
license = "MIT"
authors = ["Kevin Thomas"]

[dependencies]
wit-bindgen-rt = "0.41.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "docs:combat"

[package.metadata.component.target]
path = "../wit/combat/world.wit"
world = "combat"
